# voice-enabled-chatbot

./: .pep8speaks.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  chatbot.py  config.py  google_places.py  requirements-windows.txt  requirements.txt  requirements_windows.txt  setup.cfg  test-requirements.txt  tox.ini  voice_conf.py  weather.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
covid19/: Readme_covid19.md
intentClassification/: intent_classification.py
intentClassification/files/: music.json  restaurant.json  weather.json
intentClassification/rasa/data/: nlu.md
intentClassification/rasa/nlu-20200427-002014/: fingerprint.json
intentClassification/rasa/nlu-20200427-002014/nlu/: component_3_CountVectorsFeaturizer.pkl  component_4_CountVectorsFeaturizer.pkl  component_5_DIETClassifier.index_label_id_mapping.pkl  component_5_DIETClassifier.label_data.pkl  component_5_DIETClassifier.tf_model.index  metadata.json
microbots/FaceFilterBot/: README.md
microbots/FaceFilterBot/filters/: blue_filter.py
microbots/Sample/: _DS_Store  dog.py  eyes.py  faceSwap.py
microbots/covid19/: Readme_covid19.md  config.py  covid19_summary.py  requirements.txt
microbots/signup/: config.py  crud.py  models.py  requirements.txt  voiceSignup.py
nlu-20200426-024716/: fingerprint.json
nlu-20200426-024716/nlu/: component_2_LexicalSyntacticFeaturizer.feature_to_idx_dict.pkl  component_5_DIETClassifier.data_example.pkl  component_5_DIETClassifier.tf_model.index  metadata.json
signup/: voiceSignup.py
splitwise/: README.md  app.py  config.py
