[metadata]
name = voice-enabled-chatbot
summary = Voice enabled chat bot
description-file =
    README.md

classifier =
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    microbots
